--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
@@ -30,6 +31,7 @@
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.0",
     "tailwind-merge": "^1.13.1",
